<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menuhome"
    android:icon="@drawable/house"
    android:title="@string/menu_home"



        />
    <item
        android:id="@+id/doctorFragment"
        android:title="Doctor Booking"
        android:icon="@drawable/doc1"

        />

    <item
        android:id="@+id/menu_medicine"
        android:title="@string/menu_medicine"
        android:icon="@drawable/medici"
        />

    <item
        android:id="@+id/menuscan"
        android:title="@string/menu_scan"
        android:icon="@drawable/cts"
        />
    <item
        android:id="@+id/menuprofile"
        android:title="@string/profile"
        android:icon="@drawable/man"
        />
    <item
        android:id="@+id/menumybage"
        android:title="@string/menu_mybag"
        android:icon="@drawable/bag"
        />
    <item android:title="Others">
        <menu>
            <item
                android:id="@+id/setting"
                android:icon="@drawable/settings"
                android:title="Logout"/>
        </menu>
    </item>

</menu>