<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/newbg1"
    tools:context=".EditMediOrders"
    >

    <TextView
        android:id="@+id/editmedidea1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/abeezee"
        android:padding="10dp"
        android:text="@string/editmedidea"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="128dp"
        android:layout_height="50dp"
        android:layout_marginStart="232dp"
        android:layout_marginBottom="108dp"
        android:background="@color/colorPrimaryDark"
        android:baselineAligned="false"
        android:padding="10dp"
        android:text="@string/editbtn1"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnRemove"
        android:layout_width="144dp"
        android:layout_height="51dp"

        android:layout_marginStart="28dp"
        android:layout_marginBottom="108dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/delettbtn2"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="410dp"
        android:layout_height="486dp"
        android:background="@drawable/newbg1"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editmedidea1"
        app:layout_constraintVertical_bias="0.302">

        <TextView
            android:id="@+id/editmname1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="3dp"
            android:text="@string/editmname1"
            android:textSize="13sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="171dp"
            android:layout_height="101dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/medi1" />

        <TextView
            android:id="@+id/editmname2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="3dp"

            android:text="@string/editmname2"
            android:textSize="13sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/docNameEdit2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_marginBottom="7dp" />

        <TextView
            android:id="@+id/editmname3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="3dp"
            android:text="@string/editmname3"
            android:textSize="13sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/docAuthEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_marginBottom="7dp" />

        <TextView
            android:id="@+id/editmname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="3dp"
            android:text="@string/editmname4"
            android:textSize="13sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ss5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_marginBottom="7dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>